# fin-platform

./: .gitignore  README.md  pyproject.toml
auth_service/app/: main.py
auth_service/app/api/: auth.py  users.py
auth_service/app/core/: config.py  security.py
auth_service/app/models/: user.py
auth_service/app/schemas/: user.py
auth_service/app/services/: auth.py  user.py
auth_service/app/utils/: logger.py
