[tool.poetry]
name = "fin-platform"
version = "0.1.0"
description = "Тестовое задание для проверяющего"
authors = ["lolukuk <lolukuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
alembic = "^1.13.1"
pydantic = "^2.5.3"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.1.0"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
